<resources>
    <string name="app_name">FitHub</string>
    <string name="Email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo_desc">FitHub Logo</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="bmi">BMI</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="edit_button">Edit Button</string>
    <string name="level">Level</string>
    <string name="points_earned">Points Earned</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="exercise">Exercise</string>

    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>

    <string name="aerobic_exercise">10-Minutes\nAerobic Exercise</string>
    <string name="core_exercise">10-Minutes\nCore Exercise</string>
    <string name="arm_exercise">5-Minutes\nArm Exercise</string>
    <string name="leg_exercise">10-Minutes\nLeg Exercise</string>
    <string name="testing_exercise">3-Seconds\nTesting Exercise</string>

    <string name="_10_min_aerobic_vid">c-xUk444SWc</string>
    <string name="_10_min_core_vid">3320EhbImLY</string>
    <string name="_10_min_arm_vid">SsJqlHFFsEk</string>
    <string name="_10_min_leg_vid">UTLu85-GLrQ</string>
    <string name="placeholder_vid">wUF9DeWJ0Dk</string>

    <string name="time_remaining">Time Remaining</string>
    <string name="start">START</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="stop">STOP</string>
    <string name="_0_cal">0 cal</string>
    <string name="_00_00_time">00:00</string>
    <string name="trophy">Trophy</string>
    <string name="you_exercised_for">You exercised for</string>
    <string name="_0_m_0_s">0 m 0 s</string>
    <string name="you_burned">You burned</string>
    <string name="_0_calories">0 calories</string>
    <string name="you_earned">You earned</string>
    <string name="_0_points">0 points</string>
    <string name="keep_it_up">Keep it up!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="severe_thinness">Severe Thinness</string>
    <string name="moderate_thinness">Moderate Thinness</string>
    <string name="mild_thinness">Mild Thinness</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>

    <string name="no_date">No date selected.</string>
    <string name="no_record">No record.</string>
    <string name="congrate">Congratulations! You have done the following exercises:</string>
    <string name="start_activity">Let\'s start doing an activity now!</string>
    <string name="exercise_records">Exercise Records</string>


</resources>
