<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ExerciseCompleteActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_child_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <TextView
            android:id="@+id/textViewCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/congratulations"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageViewTrophy"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/trophy"
            android:src="@drawable/trophy" />

        <TextView
            android:id="@+id/textViewExercisedFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/you_exercised_for"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewExercisedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/_0_m_0_s"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textViewBurned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/you_burned"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewCaloriesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/_0_calories"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textViewYouEarned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/you_earned"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewPointsEarned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/_0_points"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textViewKeepItUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/keep_it_up"
            android:textColor="#000000"
            android:textSize="30sp" />
    </LinearLayout>
</ScrollView>